更新註冊 登入  驗證token的部分